# bluecougar_x_ros

./: CMakeLists.txt  README.md  package.xml
cfg/: bluecougarDyn.cfg
include/: blueCougar_multiple_ros.h  blueCougar_multiple_ros_hhi.h  blueCougar_multiple_ros_hhi_info.h  blueCougar_multiple_ros_thread.h  bluecougar.h  bluecougar_multiple_thread_ros.h
launch/: bluecougar_multiple.launch
ros_camera_info/: cam0_rect.yaml  cam1_rect.yaml
src/: main.cpp  main_hhi.cpp  main_hhi_thread.cpp
