<?xml version="1.0"?>
<package>
  <name>bluecougar</name>
  <version>0.0.0</version>
  <description>This is the bluecougar-x104i package</description>

  <maintainer email="hyun91015@gmail.com">Changhyeon Kim</maintainer>
  <license>TODO</license>

  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cmake_modules</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
